# ff

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Ideas.md  LICENSE  README.md  api_answers.py  generate_2024_reports.py  pyproject.toml  pytest.ini  requirements.txt  sleeper_tests.py  temp_week8.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
Instructions/: Recap.Instructions.md
ff/: __init__.py
ff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ff/api/: __init__.py  client.py
ff/cli/: weekly_report.py
ff/compute/: __init__.py  core.py
ff/report/: __init__.py  collect.py  constants.py  formatters.py  models.py  render.py
openapi/: sleeper.yaml
python/cli/: weekly_report.py
python/ff/: __init__.py
python/ff.egg-info/: PKG-INFO  SOURCES.txt
python/ff/api/: answers.py  client.py
python/ff/cli/: weekly_report.py
python/ff/compute/: __init__.py  core.py
python/ff/report/: __init__.py  collect.py  constants.py  formatters.py  models.py  render.py
scripts/: __init__.py  generate_reports.py  validate_reports.py  validate_sleeper_api.py  weekly_report.py
scripts/lib/: client.py  compute.py  constants.py  render.py  report_collect.py  report_formatters.py  report_models.py
site/: README.md  astro.config.mjs  dev.ps1  package-lock.json  package.json  tailwind.config.cjs
site/public/styles/: foulknfootball-theme.css
site/scripts/: fetch-data.mjs
site/src/components/: BaseLayout.astro  FamilyTree.astro  FamilyTree.tsx  Footer.astro  Header.astro  HeroSection.astro  StandingsTable.astro  StandingsTable.tsx
site/src/data/: league-data.json  nav.js  season-2024.json
site/src/layouts/: BaseLayout.astro
site/src/pages/: index.astro  records.astro  rivalries.astro  teams.astro
site/src/pages/seasons/: [year].astro  index.astro
site/src/pages/seasons/2025/: index.astro
site/src/pages/seasons/[year]/week/: [week].astro
sitegen/: plan.md  whole plan.md
tests/: test_compute.py  test_report_metadata.py
